add report module
